responsive navbar fixed hover and z-index

--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,6 @@ nav {
 	left: 0;
 	right: 0;
 	top: 0;
-	/* font-family: 'Montserrat', sans-serif; */
 	padding: 0 5%;
 	height: 100px;
     background-color: #000B14;
@@ -62,9 +61,9 @@ nav .links a {
 	/* display: block; */
 	/* padding: 1em; */
 	font-size: 2rem;
-	font-weight: bold;
 	color: #fff;
 	text-decoration: none;
+    font-family: 'Roboto Condensed'; 
 }
 #nav-toggle {
 	position: absolute;
@@ -85,26 +84,24 @@ nav .icon-burger .line {
 	border-radius: 3px;
 	transition: all .3s ease-in-out;
 }
-
- 
-/* .navlist a:hover {
+.links li:hover {
     transform: scale(1.2);
 }
-.navlist a::after{
+.links li::after{
     content: '';
 	height: 3px;
-	top: 100%;
+	top: 105%;
 	border-radius: 1px;
 	position: absolute;
 	background: #02B79C;
 	transition: 0.5s;
 	box-shadow: 0px 0px 8px #02B79C;
 }
-.navlist a:hover::after{
-    width: 45%;
-    transform: translateX(50%);
+.links li:hover::after{
+    width: 50%;
+    transform: translateX(-100%);
 }
-.agikxwb{
+/* .agikxwb{
     transform: infinite;
 }
 .agikxwb:hover {
@@ -163,6 +160,7 @@ nav .icon-burger .line {
     flex-direction: column;
     justify-content: center;
     gap: 2rem;
+    z-index: 99;
 
 }
 
@@ -216,6 +214,7 @@ nav .icon-burger .line {
     row-gap: 3rem;
     column-gap: 2.5rem;
     animation: dots 2s;
+    z-index: 99;
 }
 
 .dotscontainer1 {
